Add linux/amd64 to the build matrix

--- a/script/build
+++ b/script/build
@@ -3,7 +3,7 @@
 set -euo pipefail
 
 pkg="ghe-get-all-owners"
-platforms=("windows/amd64" "windows/386" "darwin/amd64")
+platforms=("windows/amd64" "windows/386" "darwin/amd64" "linux/amd64")
 
 for platform in "${platforms[@]}"; do
     # shellcheck disable=SC2206
