--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,25 +1,19 @@
-name: Go
+name: go
 
 on:
   push:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Set up Go 1.13
+      - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.13
-        id: go
-
+          go-version: 1.14.x
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
-
       - name: Get dependencies
         run: go get -v -t -d ./...
-
       - name: Build
         run: go build -v .
