--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 before:
   hooks:
     - rm -rf dist/
-    - go mod download
+    - go mod tidy
     - go generate ./...
 
 builds:
@@ -14,9 +14,6 @@ builds:
 
 archives:
   - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
       386: i386
       amd64: x86_64
     files:
